# marimo-notebooks

./: README.md  pyproject.toml
apps/: databricks.py
apps/public/: databricks.csv
notebooks/: AWS.py  Databricks.py  GCP.py  fibonacci.py  penguins.py
scripts/: migrate.py
tests/: test_fibonacci.py  test_penguins.py
